Update Testando Efeito Stroop.ipynb

--- a/Testando Efeito Stroop.ipynb
+++ b/Testando Efeito Stroop.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "Em um teste Stroop, participantes são apresentados a uma lista de palavras, e cada uma das palavras está de uma cor. A tarefa dos participantes é dizer em voz alta a cor em que a palavra foi exibida. \n",
     "\n",
-    "A tarefa tem duas condições: uma condição de palavras congruentes e uma condição de palavras incongruentes. Na condição de palavras congruentes, a palavra exibida são nomes de cores cujos nomes são a mesma cor em que a palavra foi exibida: por exemplo, <font color='red'>RED</font>, <font color='blue'>BLUE</font>. \n",
+    "A tarefa tem duas condições: uma condição de palavras congruentes e uma condição de palavras incongruentes. Na condição de palavras congruentes, a palavra exibida são nomes de cores cujos nomes são a mesma cor em que a palavra foi exibida: por exemplo, VERMELHO escrito em VERMELHO, AZUL escrito em AZUL. \n",
     "\n",
-    "Na condição de palavras incongruentes, as palavras apresentadas são nomes de cores cujos nomes não são as mesmas cores em que as palavras foram apresentadas: por exemplo, <font color='green'>PURPLE</font>, <font color='purple'>ORANGE</font>. \n",
+    "Na condição de palavras incongruentes, as palavras apresentadas são nomes de cores cujos nomes não são as mesmas cores em que as palavras foram apresentadas: por exemplo, PURPURA escrito em VERDE, LARANJA escrito em AMARELO. \n",
     "Em cada caso, medimos o tempo que demora para o indivíduo falar os nomes em uma lista das cores de de tamanhos iguais. Cada participante realizará o teste e tem o tempo medido para a realização do teste nas duas condições."
    ]
   },
